# savior-game

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json
.cargo/: config.toml
assets/: .gitkeep
src/game/: debug_ui.rs  mod.rs  player.rs  protocol.rs  states.rs  svg_assets.rs  ui.rs
src/game/svg/: mod.rs  pipeline.rs
