[package]
name = "savior-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"

# ── Profiles ─────────────────────────────────────────────────────────────────

# Keep dev builds fast while making dependency code fast enough to run.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# WASM release: optimise for size.
[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1
strip = "debuginfo"
