[package]
name = "savior-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
roxmltree = "0.20"
usvg = "0.45"
resvg = "0.45"
tiny-skia = "0.11"

# ── Profiles ─────────────────────────────────────────────────────────────────

# Keep dev builds fast while making dependency code fast enough to run.
[profile.dev]
opt-level = 1
debug = 0
strip = "debuginfo"
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

# WASM release: optimise for size.
[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
